<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="fragment"
            type="com.test.weatherapp1.ui.fragments.SelectLocationFragment" />

        <variable
            name="viewModel"
            type="com.test.weatherapp1.ui.WeatherViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="70dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="99dp"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_logo"
                android:contentDescription="@string/logo" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="10.dp"
                android:paddingEnd="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/weather"
                    android:textColor="@color/black"
                    android:textSize="30.sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="30.sp" />

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="284dp"
            android:layout_height="284dp"
            android:background="@drawable/ic_cloud"
            android:contentDescription="@string/cloud"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rounded_background"
                    android:paddingVertical="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="0dp"
                    android:text="@string/get_current_location"
                    android:textColor="@color/greyTextColor"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/current_location_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{fragment::getLocationCLick}"
                    android:text="@string/check" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="20dp">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:autofillHints=""
                    android:background="@drawable/rounded_background"
                    android:drawableStart="@drawable/ic_search"
                    android:drawablePadding="10dp"
                    android:maxLines="1"
                    android:paddingVertical="10dp"
                    android:paddingStart="15dp"
                    android:paddingEnd="0dp"
                    android:text="@={viewModel.citySearchText}"
                    android:textColor="@color/greyTextColor"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/find_city_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{fragment::getCoordinatesByCityNameClick}"
                    android:text="@string/check" />

            </LinearLayout>


        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>