<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.test.weatherapp1.ui.fragments.HomeFragment" />

        <variable
            name="viewModel"
            type="com.test.weatherapp1.ui.WeatherViewModel" />
    </data>

    <ScrollView
        android:id="@+id/myview"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/homeBackgroundColor"
            android:padding="16dp">

            <LinearLayout
                android:id="@+id/city_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/ic_pin"
                    android:contentDescription="@string/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@{viewModel.uiState.city}"
                    android:textColor="@android:color/white"
                    android:textSize="18.sp"
                    tools:text="Fortaleza" />


            </LinearLayout>

            <ImageView
                android:id="@+id/status_imageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="@string/cloud"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city_linearLayout"
                tools:background="@drawable/ic_cloud" />

            <TextView
                android:id="@+id/temperature_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@{viewModel.uiState.currentTemp}"
                android:textColor="@android:color/white"
                android:textSize="64.sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/status_imageView"
                tools:text="28º" />

            <TextView
                android:id="@+id/info_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precipitations"
                android:textColor="@android:color/white"
                android:textSize="18.sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/temperature_textView" />

            <LinearLayout
                android:id="@+id/maxmin_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_textView">

                <TextView
                    android:id="@+id/max_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@{viewModel.uiState.maxTemp}"
                    android:textColor="@android:color/white"
                    android:textSize="18.sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_textView"
                    tools:text="Max.: 31º" />

                <TextView
                    android:id="@+id/min_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@{viewModel.uiState.minTemp}"
                    android:textColor="@android:color/white"
                    android:textSize="18.sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/temperature_textView"
                    tools:text="Min.: 25º" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shortInfoBlock_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_home_background"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maxmin_linearLayout">

                <TextView
                    android:id="@+id/humidity_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:text="@{viewModel.uiState.humidity}"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_rain"
                    tools:text="6%" />

                <TextView
                    android:id="@+id/pressure_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:text="@{viewModel.uiState.pressure}"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_termometr"
                    tools:text="1014" />

                <TextView
                    android:id="@+id/windySpeed_textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="10dp"
                    android:text="@{viewModel.uiState.windy}"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:drawableStartCompat="@drawable/ic_wind"
                    tools:text="19 km/h" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailInfoBlock_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_home_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortInfoBlock_linearLayout">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:text="@string/today"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="10dp"
                        android:gravity="end"
                        android:text="@{viewModel.uiState.currentDay}"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal"
                        tools:text="Mar, 9" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:reverseLayout="false"
                    tools:listitem="@layout/item_hour_weather" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/forecastInfoBlock_linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_home_background"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/shortInfoBlock_linearLayout"
                tools:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:text="@string/next_forecast"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/forecast_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:reverseLayout="false"
                    tools:listitem="@layout/item_forecast_weather" />

            </LinearLayout>

            <Button
                android:id="@+id/nextForecast_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="@{fragment::onNextForecastClick}"
                android:text="@string/next_forecast"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailInfoBlock_linearLayout" />

            <Button
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:onClick="@{fragment::onHomeButtonClick}"
                android:text="@string/home"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forecastInfoBlock_linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>